samples/_failures_safe/1761200093_cba1cb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_975c624b.c: In function ‘main’:
./samples/SAFE/__tmp_975c624b.c:168:5: error: expected ‘,’ or ‘;’ at end of input
  168 |     for (int i = 0
      |     ^~~
./samples/SAFE/__tmp_975c624b.c:168:5: error: expected declaration or statement at end of input
